--- a/Ch1_预备知识/2.2数据预处理.ipynb
+++ b/Ch1_预备知识/2.2数据预处理.ipynb
@@ -17,7 +17,7 @@
     "import os\n",
     "\n",
     "os.makedirs(os.path.join('..','data'),exist_ok=True)\n",
-    "data_file=os.path.join('..','data','house_tiny.csv')\n",
+    "data_file=os.path.join('..','data/Ch2','house_tiny.csv')\n",
     "with open(data_file,'w') as f:\n",
     "    f.write('NumRooms,Alley,Price\\n')    # 列名\n",
     "    f.write('NA,Pave,127500\\n')      # 每行表示一个数据样本\n",
@@ -28,12 +28,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-10T15:25:23.026459200Z",
-     "start_time": "2024-10-10T15:25:23.013150700Z"
+     "end_time": "2024-10-12T13:56:37.056756600Z",
+     "start_time": "2024-10-12T13:56:37.035464300Z"
     }
    },
    "id": "f43685aa844419b",
-   "execution_count": 1
+   "execution_count": 8
   },
   {
    "cell_type": "code",
@@ -59,12 +59,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-10T15:25:23.463889600Z",
-     "start_time": "2024-10-10T15:25:23.028452800Z"
+     "end_time": "2024-10-12T13:56:37.069800200Z",
+     "start_time": "2024-10-12T13:56:37.054756700Z"
     }
    },
    "id": "d4cb701d041c6050",
-   "execution_count": 2
+   "execution_count": 9
   },
   {
    "cell_type": "markdown",
@@ -86,7 +86,7 @@
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[3], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m inputs,outputs\u001B[38;5;241m=\u001B[39mdata\u001B[38;5;241m.\u001B[39miloc[:,\u001B[38;5;241m0\u001B[39m:\u001B[38;5;241m2\u001B[39m],data\u001B[38;5;241m.\u001B[39miloc[:,\u001B[38;5;241m2\u001B[39m]\n\u001B[1;32m----> 2\u001B[0m inputs\u001B[38;5;241m=\u001B[39minputs\u001B[38;5;241m.\u001B[39mfillna(\u001B[43minputs\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mmean\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m)\n\u001B[0;32m      3\u001B[0m \u001B[38;5;28mprint\u001B[39m(inputs)\n",
+      "Cell \u001B[1;32mIn[10], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m inputs,outputs\u001B[38;5;241m=\u001B[39mdata\u001B[38;5;241m.\u001B[39miloc[:,\u001B[38;5;241m0\u001B[39m:\u001B[38;5;241m2\u001B[39m],data\u001B[38;5;241m.\u001B[39miloc[:,\u001B[38;5;241m2\u001B[39m]\n\u001B[1;32m----> 2\u001B[0m inputs\u001B[38;5;241m=\u001B[39minputs\u001B[38;5;241m.\u001B[39mfillna(\u001B[43minputs\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mmean\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m)\n\u001B[0;32m      3\u001B[0m \u001B[38;5;28mprint\u001B[39m(inputs)\n",
       "File \u001B[1;32mD:\\app\\anaconda3\\envs\\ai\\lib\\site-packages\\pandas\\core\\generic.py:11556\u001B[0m, in \u001B[0;36mNDFrame._add_numeric_operations.<locals>.mean\u001B[1;34m(self, axis, skipna, numeric_only, **kwargs)\u001B[0m\n\u001B[0;32m  11539\u001B[0m \u001B[38;5;129m@doc\u001B[39m(\n\u001B[0;32m  11540\u001B[0m     _num_doc,\n\u001B[0;32m  11541\u001B[0m     desc\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mReturn the mean of the values over the requested axis.\u001B[39m\u001B[38;5;124m\"\u001B[39m,\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m  11554\u001B[0m     \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs,\n\u001B[0;32m  11555\u001B[0m ):\n\u001B[1;32m> 11556\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m NDFrame\u001B[38;5;241m.\u001B[39mmean(\u001B[38;5;28mself\u001B[39m, axis, skipna, numeric_only, \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs)\n",
       "File \u001B[1;32mD:\\app\\anaconda3\\envs\\ai\\lib\\site-packages\\pandas\\core\\generic.py:11201\u001B[0m, in \u001B[0;36mNDFrame.mean\u001B[1;34m(self, axis, skipna, numeric_only, **kwargs)\u001B[0m\n\u001B[0;32m  11194\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mmean\u001B[39m(\n\u001B[0;32m  11195\u001B[0m     \u001B[38;5;28mself\u001B[39m,\n\u001B[0;32m  11196\u001B[0m     axis: Axis \u001B[38;5;241m|\u001B[39m \u001B[38;5;28;01mNone\u001B[39;00m \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m0\u001B[39m,\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m  11199\u001B[0m     \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs,\n\u001B[0;32m  11200\u001B[0m ) \u001B[38;5;241m-\u001B[39m\u001B[38;5;241m>\u001B[39m Series \u001B[38;5;241m|\u001B[39m \u001B[38;5;28mfloat\u001B[39m:\n\u001B[1;32m> 11201\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_stat_function(\n\u001B[0;32m  11202\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mmean\u001B[39m\u001B[38;5;124m\"\u001B[39m, nanops\u001B[38;5;241m.\u001B[39mnanmean, axis, skipna, numeric_only, \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs\n\u001B[0;32m  11203\u001B[0m     )\n",
       "File \u001B[1;32mD:\\app\\anaconda3\\envs\\ai\\lib\\site-packages\\pandas\\core\\generic.py:11158\u001B[0m, in \u001B[0;36mNDFrame._stat_function\u001B[1;34m(self, name, func, axis, skipna, numeric_only, **kwargs)\u001B[0m\n\u001B[0;32m  11154\u001B[0m     nv\u001B[38;5;241m.\u001B[39mvalidate_stat_func((), kwargs, fname\u001B[38;5;241m=\u001B[39mname)\n\u001B[0;32m  11156\u001B[0m validate_bool_kwarg(skipna, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mskipna\u001B[39m\u001B[38;5;124m\"\u001B[39m, none_allowed\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mFalse\u001B[39;00m)\n\u001B[1;32m> 11158\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_reduce\u001B[49m\u001B[43m(\u001B[49m\n\u001B[0;32m  11159\u001B[0m \u001B[43m    \u001B[49m\u001B[43mfunc\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mname\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mname\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43maxis\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43maxis\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mskipna\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mskipna\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mnumeric_only\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mnumeric_only\u001B[49m\n\u001B[0;32m  11160\u001B[0m \u001B[43m\u001B[49m\u001B[43m)\u001B[49m\n",
@@ -111,12 +111,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-10T15:25:25.402846100Z",
-     "start_time": "2024-10-10T15:25:23.463889600Z"
+     "end_time": "2024-10-12T13:56:37.133301900Z",
+     "start_time": "2024-10-12T13:56:37.070802400Z"
     }
    },
    "id": "627bd4892944b3d",
-   "execution_count": 3
+   "execution_count": 10
   },
   {
    "cell_type": "code",
@@ -140,12 +140,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-10T15:25:48.863798300Z",
-     "start_time": "2024-10-10T15:25:48.850842300Z"
+     "end_time": "2024-10-12T13:56:40.848627600Z",
+     "start_time": "2024-10-12T13:56:40.835103600Z"
     }
    },
    "id": "c7614b8bd2b8a462",
-   "execution_count": 4
+   "execution_count": 11
   },
   {
    "cell_type": "markdown",
@@ -167,7 +167,7 @@
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[9], line 3\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mtorch\u001B[39;00m\n\u001B[1;32m----> 3\u001B[0m X,y\u001B[38;5;241m=\u001B[39m\u001B[43mtorch\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mtensor\u001B[49m\u001B[43m(\u001B[49m\u001B[43minputs\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mvalues\u001B[49m\u001B[43m)\u001B[49m,torch\u001B[38;5;241m.\u001B[39mtensor(outputs\u001B[38;5;241m.\u001B[39mvalues)\n\u001B[0;32m      4\u001B[0m X,y\n",
+      "Cell \u001B[1;32mIn[13], line 3\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mtorch\u001B[39;00m\n\u001B[1;32m----> 3\u001B[0m X,y\u001B[38;5;241m=\u001B[39m\u001B[43mtorch\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mtensor\u001B[49m\u001B[43m(\u001B[49m\u001B[43minputs\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mvalues\u001B[49m\u001B[43m)\u001B[49m,torch\u001B[38;5;241m.\u001B[39mtensor(outputs\u001B[38;5;241m.\u001B[39mvalues)\n\u001B[0;32m      4\u001B[0m X,y\n",
       "\u001B[1;31mTypeError\u001B[0m: can't convert np.ndarray of type numpy.object_. The only supported types are: float64, float32, float16, complex64, complex128, int64, int32, int16, int8, uint64, uint32, uint16, uint8, and bool."
      ]
     }
@@ -181,12 +181,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-10T15:30:32.545990900Z",
-     "start_time": "2024-10-10T15:30:32.523348400Z"
+     "end_time": "2024-10-12T13:56:49.519351400Z",
+     "start_time": "2024-10-12T13:56:49.491529400Z"
     }
    },
    "id": "2d0cb00bce07cd8d",
-   "execution_count": 9
+   "execution_count": 13
   }
  ],
  "metadata": {
